--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1 class = "text-center">DataConnect@Berkeley</h1
-<div class= "jumbo-img" ><img  src="http://placehold.it/1200x450"></div>
+<div class= "jumbo-img" ><img  src="{{site.baseurl}}/img/bayview_banner.jpg"></div>
 
 <h3 class = "text-center" >What is Lorem Ipsum?</h5>
 
